# nessai-gw

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ci_environment.yaml  pyproject.toml
.github/workflows/: build-env.yml  lint.yml  tests.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  proposals.rst  requirements.txt
examples/bilby_gw_examples/: README.md  calibration_example.py  fast_example.py
src/nessai_gw/: __init__.py  proposals.py
src/nessai_gw/reparameterisations/: __init__.py  distance.py  distance_converters.py  lisa.py  phase.py  reparameterisations.py  utils.py
tests/: conftest.py  test_proposals.py
tests/test_reparameterisations/: test_distance.py  test_distance_converters.py  test_lisa.py  test_phase.py  test_reparameterisation_integration.py  test_reparameterisations.py  test_utils.py
